--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,8 +17,8 @@ jobs:
     - name: Install pnpm
       run: npm install -g pnpm # Install pnpm globally
     - name: Install dependencies
-      run: pnpm install --frozen-lockfile # Use pnpm to install dependencies with lockfile integrity
+      run: npm install --frozen-lockfile # Use pnpm to install dependencies with lockfile integrity
     - name: Build Angular project
-      run: pnpm build -- --configuration production # Build the project using pnpm
+      run: npm build -- --configuration production # Build the project using pnpm
     - name: Run tests
-      run: pnpm test # Run tests using pnpm
+      run: npm test # Run tests using pnpm
