--- a/deployment.yaml
+++ b/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: ghcr.io/marsevilla/outilmaria-front:latest
+        image: marsevillaesc/outilmaria-front:latest
         ports:
         - containerPort: 80
         resources:
