--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -61,4 +61,4 @@ jobs:
         # with:
         #   subject-name: marsevillaesc/outilmaria-front
         # #   subject-digest: ##${##{ steps.push.outputs.digest }}
-        # #   push-to-registry: true
+        # #   push-to-registry: true #
